# my-tracks

./: .agent-models.json  .copilot-directives.md  .env.example  .gitignore  AGENTS.md  AGENT_MODELS.md  API.md  COMMANDS.md  DEPLOYMENT.md  DOCS_INDEX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_NOTES.md  MQTT_IMPLEMENTATION.md  MQTT_STATUS.md  PROJECT_FILES.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  WEBSOCKET.md  conftest.py  create-test-trail  eslint.config.mjs  generate-tail  generate_load  install  install.py  manage.py  my-tracks-server  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup  setup.sh  start-server  (+22 more)
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  cleanup-branch-on-merge.yml  cleanup-graphite-branch.yml  cleanup-merged-branches.yml  cleanup-stale-graphite-branches.yml  pr-validation.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
my_tracks/: apps.py  auth.py  consumers.py  models.py  pki.py  serializers.py  urls.py  utils.py  views.py
my_tracks/migrations/: 0001_initial.py  0002_location_ip_address.py  0003_owntracksmessage.py  0004_alter_location_latitude_alter_location_longitude.py  0005_location_tracker_id.py  0006_alter_location_latitude_alter_location_longitude.py  __init__.py  (+8 more)
mytracks/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tracker/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
web_ui/: __init__.py  apps.py  urls.py  views.py
(+25 files in other folders)
